--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>Movie App</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <header>
+        <img src="#" alt="Logo">
+        <ul id="categories">
+          <li id="movietotal">Movies()</li>
+          <li>Series</li>
+          <li>BookMarks</li>
+        </ul>
+      </header>
 </body>
 </html>
