Add footer for the home page #16

--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,8 @@
           <li>BookMarks</li>
         </ul>
       </header>
+      <footer>
+        <p>Created by Fatima, Arnaud and Alamin</p>
+      </footer>
 </body>
 </html>
