Display list of items on the Homepage #15

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
           <li>BookMarks</li>
         </ul>
       </header>
+
+      <section class="moviediv">
+        <div class="modal" id="modal"></div>
+      </section>
+
       <footer>
         <p>Created by Fatima, Arnaud and Alamin</p>
       </footer>
