Revert "Fix .hint issues in index.html"
This reverts commit e43722b758f475deec9bcc32513ff97b3c3e6395.

--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,18 @@
     <title>Movie App</title>
 </head>
 <body>
-<header>
-  <img src="#" alt="Logo">
-  <ul id="categories">
-    <li id="movietotal">Movies()</li>
-    <li>Series</li>
-    <li>BookMarks</li>
-  </ul>
-</header>
+    <header>
+        <img src="#" alt="Logo">
+        <ul id="categories">
+          <li id="movietotal">Movies()</li>
+          <li>Series</li>
+          <li>BookMarks</li>
+        </ul>
+      </header>
 
-     
+      <section class="moviediv">
+        <div class="modal" id="modal"></div>
+      </section>
 
       <footer>
         <p>Created by Fatima, Arnaud and Alamin</p>
