--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,23 @@
     <title>Movie App</title>
 </head>
 <body>
-    <header>
-        <img src="#" alt="Logo">
-        <ul id="categories">
-          <li id="movietotal">Movies()</li>
-          <li>Series</li>
-          <li>BookMarks</li>
-        </ul>
-      </header>
+<header>
+  <img src="#" alt="Logo">
+  <ul id="categories">
+    <li id="movietotal">Movies()</li>
+    <li>Series</li>
+    <li>BookMarks</li>
+  </ul>
+</header>
 
-      <section class="moviediv">
-        <div class="modal" id="modal"></div>
-      </section>
+<!-- Display comments-popup Section start -->
+<section class="moviediv">
+  <div class="modal" id="modal"></div>
+</section>
 
-      <footer>
-        <p>Created by Fatima, Arnaud and Alamin</p>
-      </footer>
+<!-- Footer section start -->
+<footer>
+  <p>Created by Fatima, Arnaud and Alamin</p>
+</footer>
 </body>
 </html>
